# barista

./: .gitignore  BUILD.bazel  DEVELOPMENT.md  WORKSPACE  angular.json  package-lock.json  package.json  tsconfig.base.json
.buildkite/: baristaPipeline.yml  baristacli.py  bazel.rc  requirement.bat
.buildkite/build_cache/: bazel_cache.enc  cache-write-key.json.enc  setup_ci_build_cache.sh
apps/components-e2e/src/components/quick-filter/: BUILD.bazel  quick-filter.e2e.ts
apps/components-e2e/src/components/quick-filter/quick-filter-async/: quick-filter-async.ts
apps/demos/src/: app-routing.module.ts  barista-examples.a11y.ts  nav-items.ts
apps/design-tokens-ui/: BUILD.bazel
apps/design-tokens-ui/src/: BUILD.bazel  index.html  main.dev.ts  main.prod.ts  styles.scss
apps/design-tokens-ui/src/app/: BUILD.bazel  app.component.html  app.module.ts  app.routing.module.ts
apps/design-tokens-ui/src/pages/spacings/: BUILD.bazel  spacings.component.html
apps/design-tokens-ui/src/pages/theme-detail/: theme-detail.component.html
apps/design-tokens-ui/src/pages/theme-detail/components/easing-type-select/: easing-type-select.component.html
apps/design-tokens-ui/src/pages/theme-detail/components/palette-settings/: palette-settings.component.html
apps/design-tokens-ui/src/pages/theme-detail/components/shared-generation-settings/: shared-generation-settings.component.html
apps/design-tokens-ui/src/pages/theme-detail/components/theme-settings/: theme-settings.component.html
apps/design-tokens-ui/src/pages/themes/: themes.component.html
apps/design-tokens-ui/src/pages/themes/components/theme-tile/: theme-tile.component.html
apps/design-tokens-ui/src/pipes/: BUILD.bazel
apps/design-tokens-ui/src/services/app-theme/: BUILD.bazel
apps/design-tokens-ui/src/services/spacing/: BUILD.bazel  spacing.service.ts
apps/design-tokens-ui/src/services/stateful-service/: BUILD.bazel
apps/design-tokens-ui/src/styles/: BUILD.bazel  variables.scss
apps/design-tokens-ui/src/utils/: BUILD.bazel
apps/dev/src/: app.module.ts  dt-components.module.ts
apps/dev/src/datepicker/: datepicker-demo.component.html  datepicker-demo.component.ts
libs/barista-components/: BUILD.bazel  config.bzl  package.json
libs/barista-components/alert/: BUILD.bazel
libs/barista-components/autocomplete/: BUILD.bazel
libs/barista-components/core/src/date/: index.ts  native-date-adapter.ts
libs/barista-components/datepicker/: BUILD.bazel  barista.json  index.ts
libs/barista-components/datepicker/src/: calendar-body.scss  calendar-body.ts  calendar.scss  calendar.ts  datepicker-module.ts  datepicker.html  datepicker.scss  datepicker.ts  timeinput.html  timeinput.scss  timeinput.spec.ts  timeinput.ts  timepicker.html  timepicker.scss  timepicker.ts  util.ts
libs/barista-components/experimental/datepicker/: BUILD.bazel  README.md  barista.json  index.ts
libs/barista-components/experimental/datepicker/src/: _calendar-theme.scss  calendar-body.html  calendar-body.scss  calendar-body.ts  calendar.html  calendar.scss  calendar.ts  datepicker-module.ts  datepicker.html  datepicker.scss  datepicker.ts  timeinput.html  timeinput.scss  timeinput.spec.ts  timeinput.ts  timepicker.html  timepicker.spec.ts  timepicker.ts  util.ts
libs/barista-components/experimental/datepicker/src/datepicker-utils/: util.spec.ts  util.ts
libs/barista-components/filter-field/: README.md
libs/barista-components/filter-field/src/: filter-field-default-data-source.ts  filter-field-util.ts  filter-field.html  filter-field.ts  types.ts
libs/barista-components/schematics/src/migrations/update-7-0-0/: update-7-0-0.spec.ts  update-7-0-0.ts
libs/barista-components/schematics/src/migrations/update-7-0-0/__snapshots__/: update-7-0-0.spec.ts.snap
libs/barista-components/schematics/src/migrations/update-7-0-0/config/: template-replacements.ts
libs/barista-components/schematics/src/migrations/update-7-0-0/rules/: index.ts  replacement.rule.ts
libs/barista-components/schematics/src/migrations/update-7-0-0/utils/: replace-html-attribute.spec.ts  replace-html-attribute.ts
libs/design-tokens-ui/input/: BUILD.bazel
libs/examples/src/: index.ts
libs/examples/src/datepicker/: datepicker-examples.module.ts  index.ts
libs/examples/src/datepicker/datepicker-dark-example/: datepicker-dark-example.html  datepicker-dark-example.ts
libs/examples/src/datepicker/datepicker-default-example/: datepicker-default-example.html  datepicker-default-example.ts
libs/examples/src/filter-field/: BUILD.bazel  filter-field-examples.module.ts  index.ts
libs/shared/design-system/interfaces/: BUILD.bazel
libs/shared/design-system/ui/: BUILD.bazel
patches/: @bazel+typescript+2.2.1.patch
tools/bazel_rules/: index.bzl  ng_module_macro.bzl  ng_package_macro.bzl  packages.bzl  rollup_globals.bzl
tools/bazel_rules/dev_server/: BUILD.bazel
tools/design-tokens/generate-color-palette/: BUILD.bazel
