load("//tools/bazel_rules:index.bzl", "stylelint")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

alias(
    name = "serve",
    actual = "//apps/design-tokens-ui/src:devserver",
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
)

ts_config(
    name = "tsconfig_app",
    src = "tsconfig.app.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.base.json",
    ],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig.spec.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
