load("//tools/bazel_rules:index.bzl", "ng_module", "stylelint")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "input",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = [
            "src/test-setup.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@dynatrace/design-tokens-ui/input",
    module_root = "src",
    tsconfig = "tsconfig_lib",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
    ],
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]),
    allow_empty_input = True,
)

ts_config(
    name = "tsconfig_lib",
    src = "tsconfig.lib.json",
    deps = [
        "tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
