load("//tools/bazel_rules:index.bzl", "ng_module")

package(default_visibility = ["//apps/design-tokens-ui/src:__subpackages__"])

ng_module(
    name = "stateful-service",
    srcs = glob(["*.ts"]),
    tsconfig = "//apps/design-tokens-ui:tsconfig_app",
    deps = [
        "@npm//@angular/core",
        "@npm//lodash-es",
        "@npm//rxjs",
    ],
)
